--- a/ch02-subprobs.tex
+++ b/ch02-subprobs.tex
@@ -5,6 +5,7 @@ In this chapter,
 we lay out the structure of the manipulation planning problem
 in detail.
 We also outline our approach.
+Also notation.
 
 Definitely reference DRC Trials paper for planning vs. execution
 time breakdown!
