--- a/ch07-cmr.tex
+++ b/ch07-cmr.tex
@@ -25,6 +25,8 @@ algorithm;
 the resulting \emph{Colored Probabalistic RoadMap} (cPRM)
 is illustrated on 2D and 7D CMR problems.
 
+Talk about coupling here.
+
 \section{Introduction}
 \label{sec:intro}
 
@@ -126,9 +128,10 @@ out of a total possible $27$ connections have been discovered.
 \label{fig:cmr-problems}
 \end{figure}
 
-\begin{figure*}[t]
+\begin{figure}[t]
+\begin{widepage}
 \centering
-\begin{minipage}{.49\textwidth}
+\begin{minipage}{.55\textwidth}
 \begin{subfigure}[b]{.49\linewidth}
 \centering
 \includegraphics{build/w13-fu1-ec86}
@@ -155,7 +158,7 @@ out of a total possible $27$ connections have been discovered.
 \label{subfig:w13-sameein-colored}
 \end{subfigure}
 \end{minipage}
-\begin{minipage}{.49\textwidth}
+\begin{minipage}{.43\textwidth}
 \begin{subfigure}[b]{\linewidth}
 \centering
 \includegraphics{build/plot-edges-w13}
@@ -226,7 +229,8 @@ out of a total possible $27$ connections have been discovered.
    and plot~(\ref{subfig:w13-plot-pairs}) shows the number of between-rootset
    pairs found by each.}
 \label{fig:example-w13-figstar}
-\end{figure*}
+\end{widepage}
+\end{figure}
 
 We focus our attention on graph-based planners
 (e.g. the PRM \cite{kavrakietal1996prm}) 
