--- a/ch08-taskplanning.tex
+++ b/ch08-taskplanning.tex
@@ -3,6 +3,8 @@
 
 \section{The \textsc{Proteus} Task Planner}
 
+Talk about coupling here.
+
 Uses CMR.
 Runs separate Multi-Set PRMs.
 
@@ -30,3 +32,7 @@ will handle moving starts.''
 
 This would be a really cool research problem;
 very complementary!
+
+This is a cool (and very complementary) learning problem.
+
+Evan may have done some work here already.
